--- a/matrixConsole/Info.plist
+++ b/matrixConsole/Info.plist
@@ -80,5 +80,9 @@
 	<array>
 		<string>googlechrome</string>
 	</array>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key><true/>
+    </dict>
 </dict>
 </plist>
